# Paper-Analysis-Assistant

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: corpus-synthesizer.md  paper-analyzer.md
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: main.jsx  styles.css
docs/: WORKFLOW.md
paper_research_assistant/: __init__.py  analyzer.py  cli.py  dashboard.py  extractor.py  graph.py  host_workflow.py  pipeline.py  report.py  scanner.py  text_utils.py  utils.py
